--- a/_sass/ontology/engines/_cognition.scss
+++ b/_sass/ontology/engines/_cognition.scss
@@ -103,7 +103,7 @@
       top: -0.1em;
       font-size: 2em;
       line-height: 1;
-      color: oklch(0.70 0.15 85);
+      color: oklch(0.55 0.12 85);
       font-family: Georgia, serif;
     }
   }
